--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,40 +1,60 @@
-name: CI Build and optional deploy
+name: CI Build and Push Multi-Arch
 
 on:
   push:
-    branches: [ master ]
-  workflow_dispatch:
-    inputs:
-      target_env:
-        description: 'Target environment'
-        required: true
-        default: dev
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
+permissions:
+  contents: read
+  packages: write
+  id-token: write
 
 jobs:
-  build:
+  build-and-push:
     runs-on: ubuntu-latest
+    environment: ci
+
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v3
-    - name: Build and push multi-arch image
-      uses: docker/build-push-action@v4
-      with:
-        push: true
-        context: .
-        tags: ghcr.io/arkinfotech24/dummy-app:${{ github.sha }}
-        platforms: linux/arm/v7,linux/arm64,linux/amd64
-    - name: Optional deploy via SSH bastion
-      if: ${{ github.event.inputs.target_env == 'dev' }}
-      uses: appleboy/ssh-action@v0.1.7
-      with:
-        host: ${{ secrets.HOMELAB_BASTION_HOST }}
-        username: ${{ secrets.HOMELAB_USER }}
-        key: ${{ secrets.HOMELAB_SSH_KEY }}
-        script: |
-          export IMAGE=ghcr.io/arkinfotech24/dummy-app:${{ github.sha }}
-          export TARGET_ENV=${{ github.event.inputs.target_env }}
-          cd /home/${{ secrets.HOMELAB_USER }}/repo/jenkins-k8s-cicd-demo || exit 0
-          git pull || true
-          envsubst < k8s/app-deployment-template.yaml | kubectl apply -f -
-          envsubst < k8s/app-service-template.yaml | kubectl apply -f -
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+        with:
+          platforms: linux/arm/v7,linux/arm64,linux/amd64
+
+      - name: Set up Docker Buildx (docker-container driver)
+        uses: docker/setup-buildx-action@v2
+        with:
+          driver: docker-container
+          install: true
+
+      - name: Create builder instance (ensure running)
+        run: |
+          docker buildx inspect multi-builder >/dev/null 2>&1 || docker buildx create --name multi-builder --use
+          docker buildx inspect --bootstrap
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GHCR_PAT }}
+
+      - name: Build and push multi-arch image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          platforms: linux/arm/v7,linux/arm64,linux/amd64
+          tags: ghcr.io/arkinfotech24/dummy-app:${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+      - name: Verify image manifest
+        run: |
+          echo "Listing manifest for image:"
+          docker run --rm mplatform/mquery:latest ghcr.io/arkinfotech24/dummy-app:${{ github.sha }}
+
