--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,67 +1,97 @@
-name: CI Build and Push Multi-Arch
+pipeline {
+  agent any
 
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+  parameters {
+    choice(name: 'TARGET_ENV', choices: ['dev', 'test', 'prod'], description: 'Select environment to deploy')
+    string(name: 'IMAGE_TAG', defaultValue: 'latest', description: 'Image tag to deploy')
+    booleanParam(name: 'SKIP_DEPLOY', defaultValue: false, description: 'Skip Kubernetes deployment')
+  }
 
-permissions:
-  contents: read
-  packages: write
-  id-token: write
+  environment {
+    IMAGE = "ghcr.io/arkinfotech24/dummy-app:${params.IMAGE_TAG}"
+    KUBECONFIG_CRED = 'kubeconfig-file-cred'
+    REGISTRY_CRED = 'registry-cred'
+  }
 
-jobs:
-  build-and-push:
-    runs-on: ubuntu-latest
-    environment: ci
+  stages {
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+    stage('Checkout') {
+      steps {
+        echo "[INFO] Checking out source code..."
+        checkout scm
+      }
+    }
 
-      - name: Verify Dockerfile exists
-        run: |
-          if [ ! -f Dockerfile ]; then
-            echo "❌ Dockerfile not found in root directory"
-            exit 1
-          fi
+    stage('Login to GHCR') {
+      steps {
+        echo "[INFO] Logging into GitHub Container Registry..."
+        withCredentials([usernamePassword(credentialsId: env.REGISTRY_CRED, usernameVariable: 'GHCR_USERNAME', passwordVariable: 'GHCR_TOKEN')]) {
+          sh 'echo "${GHCR_TOKEN}" | docker login ghcr.io -u "${GHCR_USERNAME}" --password-stdin'
+        }
+      }
+    }
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-        with:
-          platforms: linux/arm/v7,linux/arm64,linux/amd64
-
-      - name: Set up Docker Buildx (docker-container driver)
-        uses: docker/setup-buildx-action@v2
-        with:
-          driver: docker-container
-          install: true
-
-      - name: Create builder instance (ensure running)
-        run: |
+    stage('Build & Push Multi-Arch Image') {
+      steps {
+        echo "[INFO] Building and pushing multi-arch image..."
+        sh '''
           docker buildx inspect multi-builder >/dev/null 2>&1 || docker buildx create --name multi-builder --use
-          docker buildx inspect --bootstrap
+          docker buildx build \
+            --builder multi-builder \
+            --platform linux/arm/v7,linux/arm64,linux/amd64 \
+            -t ${IMAGE} \
+            --push \
+            .
+        '''
+      }
+    }
 
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+    stage('Deploy to Kubernetes') {
+      when {
+        expression { return !params.SKIP_DEPLOY }
+      }
+      steps {
+        echo "[INFO] Deploying to Kubernetes namespace: app-${params.TARGET_ENV}"
+        withCredentials([file(credentialsId: env.KUBECONFIG_CRED, variable: 'KUBECONFIG_FILE')]) {
+          sh '''
+            export KUBECONFIG=${KUBECONFIG_FILE}
+            export IMAGE=${IMAGE}
+            export TARGET_ENV=${params.TARGET_ENV}
 
-      - name: Build and push multi-arch image
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          platforms: linux/arm/v7,linux/arm64,linux/amd64
-          tags: ghcr.io/arkinfotech24/dummy-app:${{ github.sha }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+            kubectl apply -f k8s/namespaces.yaml
+            envsubst < k8s/app-deployment-template.yaml | kubectl apply -f -
+            envsubst < k8s/app-service-template.yaml | kubectl apply -f -
 
-      - name: Verify image manifest
-        run: |
-          echo "Listing manifest for image:"
-          docker run --rm mplatform/mquery:latest ghcr.io/arkinfotech24/dummy-app:${{ github.sha }}
+            echo "[INFO] Waiting for rollout to complete..."
+            kubectl -n app-${TARGET_ENV} rollout status deployment/dummy-app --timeout=120s
+          '''
+        }
+      }
+    }
+
+    stage('Verify Deployment') {
+      when {
+        expression { return !params.SKIP_DEPLOY }
+      }
+      steps {
+        echo "[INFO] Verifying deployment in app-${params.TARGET_ENV}..."
+        withCredentials([file(credentialsId: env.KUBECONFIG_CRED, variable: 'KUBECONFIG_FILE')]) {
+          sh '''
+            export KUBECONFIG=${KUBECONFIG_FILE}
+            kubectl -n app-${TARGET_ENV} get pods -l app=dummy-app
+            kubectl -n app-${TARGET_ENV} get svc dummy-app
+          '''
+        }
+      }
+    }
+  }
+
+  post {
+    success {
+      echo "[SUCCESS] Pipeline completed successfully for ${params.TARGET_ENV} with image tag ${params.IMAGE_TAG}"
+    }
+    failure {
+      echo "[ERROR] Pipeline failed. Check logs for details."
+    }
+  }
+}
