--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,6 +85,7 @@ jobs:
       - name: Set up kubeconfig
         if: ${{ github.event.inputs.SKIP_DEPLOY != 'true' }}
         run: |
+          mkdir -p $HOME/.kube
           echo "${{ secrets.KUBECONFIG_DATA }}" | base64 -d > $HOME/.kube/config
           echo "✅ Kubeconfig loaded"
         env:
@@ -112,6 +113,7 @@ jobs:
           echo "[INFO] Verifying deployment in app-${TARGET_ENV}..."
           kubectl -n app-${TARGET_ENV} get pods -l app=dummy-app
           kubectl -n app-${TARGET_ENV} get svc dummy-app
+
 
 
 
