--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ permissions:
 
 jobs:
   build-and-deploy:
-    runs-on: [self-hosted, linux, arm64]
+    runs-on: ubuntu-latest
     environment: ci
 
     steps:
@@ -105,6 +105,7 @@ jobs:
           echo "[INFO] Verifying deployment in app-${TARGET_ENV}..."
           kubectl -n app-${TARGET_ENV} get pods -l app=dummy-app
           kubectl -n app-${TARGET_ENV} get svc dummy-app
+
 
 
 
