--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ permissions:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    environment: ci
+    environment: ${{ github.event.inputs.TARGET_ENV }}
 
     steps:
       - name: Checkout
@@ -85,7 +85,7 @@ jobs:
         env:
           KUBECONFIG_DATA: ${{ secrets.KUBECONFIG_DATA }}
 
-      - name: Deploy to Kubernetes
+      - name: Deploy to Kubernetes (Helm)
         env:
           IMAGE: ghcr.io/arkinfotech24/dummy-app:${{ github.event.inputs.IMAGE_TAG || github.sha }}
           TARGET_ENV: ${{ github.event.inputs.TARGET_ENV || 'dev' }}
@@ -93,9 +93,11 @@ jobs:
           export KUBECONFIG=$HOME/.kube/config
           echo "[INFO] Deploying to Kubernetes namespace: app-${TARGET_ENV}"
           kubectl apply -f k8s/namespaces.yaml
-          envsubst < k8s/app-deployment-template.yaml | kubectl apply -f -
-          envsubst < k8s/app-service-template.yaml | kubectl apply -f -
-          kubectl -n app-${TARGET_ENV} rollout status deployment/dummy-app --timeout=120s
+          helm upgrade --install dummy-app ./helm-chart \
+            --namespace app-${TARGET_ENV} \
+            --set image.tag=${IMAGE} \
+            --set env=${TARGET_ENV} \
+            --wait
 
       - name: Verify Deployment
         env:
@@ -106,8 +108,24 @@ jobs:
           kubectl -n app-${TARGET_ENV} get pods -l app=dummy-app
           kubectl -n app-${TARGET_ENV} get svc dummy-app
 
+      - name: Rollback on Failure
+        if: failure()
+        env:
+          TARGET_ENV: ${{ github.event.inputs.TARGET_ENV || 'dev' }}
+        run: |
+          export KUBECONFIG=$HOME/.kube/config
+          echo "⚠️ Rollback triggered due to failed rollout"
+          helm rollback dummy-app --namespace app-${TARGET_ENV}
 
-
+      - name: Promote to Next Environment
+        if: ${{ github.event.inputs.TARGET_ENV == 'dev' }}
+        run: |
+          echo "✅ Promotion logic triggered: dev → test"
+          gh workflow run ci.yml \
+            --repo arkinfotech24/jenkins-k8s-cicd-demo \
+            --ref master \
+            -f TARGET_ENV=test \
+            -f IMAGE_TAG=${{ github.event.inputs.IMAGE_TAG || github.sha }}
 
 
 # name: CI Build and Deploy
